# ros_service_volume_estimation

./: INSTALL_GUIDE.md  T_level.txt  T_level_yaw.txt  coal_piles_simulation.pcd  coal_piles_simulator.py  obb_corners.txt  pcd_tool.py  readme.md  requirements.txt
catkin_ws/devel/: .catkin  local_setup.fish  local_setup.sh  setup.sh
catkin_ws/devel/include/ros_volume_estimation/: ToggleProcessing.h  ToggleProcessingRequest.h  ToggleProcessingResponse.h
catkin_ws/devel/lib/pkgconfig/: ros_volume_estimation.pc
catkin_ws/devel/lib/python3/dist-packages/ros_volume_estimation/srv/: _ToggleProcessing.py  __init__.py
catkin_ws/devel/lib/ros_volume_estimation/: crop_filter_node  transform_node  volume_estimator_node  workflow_control_node
catkin_ws/devel/share/common-lisp/ros/ros_volume_estimation/srv/: ToggleProcessing.lisp  _package.lisp  _package_ToggleProcessing.lisp  ros_volume_estimation-srv.asd
catkin_ws/devel/share/gennodejs/ros/ros_volume_estimation/srv/: ToggleProcessing.js  _index.js
catkin_ws/devel/share/ros_volume_estimation/cmake/: ros_volume_estimation-msg-extras.cmake  ros_volume_estimation-msg-paths.cmake  ros_volume_estimationConfig.cmake
catkin_ws/devel/share/roseus/ros/ros_volume_estimation/: manifest.l
catkin_ws/devel/share/roseus/ros/ros_volume_estimation/srv/: ToggleProcessing.l
catkin_ws/src/ros_volume_estimation/: CMakeLists.txt  README.md
catkin_ws/src/ros_volume_estimation/launch/: test_single_node.launch  volume_estimation_pipeline.launch  volume_estimation_pipeline_service.launch  workflow_control.launch
catkin_ws/src/ros_volume_estimation/src/: crop_filter_node.cpp  transform_node.cpp  volume_estimator_node.cpp  workflow_control_node.cpp
catkin_ws/src/ros_volume_estimation/srv/: ToggleProcessing.srv
